# TIDALTAMU-Covid-data-preprocessing

./: main.py  nasty.py  pyproject.toml
