[tool.poetry]
name = "repl_python3_TIDALTAMU-Covid-data-preprocessing"
version = "0.1.0"
description = ""
authors = ["Elayne Elphingstone <elphibry000@tamu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
